--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - ./data:/opt/spark-data
       - ./conf:/opt/spark-conf
       - ./logs:/opt/spark-logs
+      - ./target/scala-2.12:/app
     command: "/start-master.sh"
   spark-worker:
     build: .
